# duct

./: .autorc  .bumpversion.cfg  .gitignore  .local.jsonargparse-TODO.md  .pre-commit-config.yaml  .update-readme-help.py  .update-readme-help.sh  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  REUSE.toml  TELEMETRY_COMPARISON_PR_SUMMARY.md  TODO.md  abandoning_parent.sh  add_git_notes  consume_mem.py  duct.py  duct_time  interleave.py  pyproject.toml  run-tests.sh  setup.cfg  smoke-test.sh  smoke-tests.sh  smon.py  smon.py.example  test_logs.py  test_script.py  tmp-plot-demo.md  tmp-render_variants.py  top_test.sh  tox.ini  wrapper.py
.chatgpt/: 2024-04-21.md  2024-04-22.md  2024-04-23.md
.duct/run-logs/: 2024-04-16T15:35:32-04:00_802267.out  2024-04-16T15:35:32-04:00_802267.stats.json  2024-04-16T15:37:51-04:00_803473.out  2024-04-16T15:37:51-04:00_803473.stats.json
.github/workflows/: auto-fix-content.yaml  codespell.yaml  labels.yaml  readme-updated.yaml  release.yml  reuse.yaml  test.yaml
.lad/: .copilot-instructions.md  CLAUDE.md  LAD_RECIPE.md
.lad/claude_prompts/: 00_feature_kickoff.md  04_test_quality_systematic.md  04a_test_execution_infrastructure.md  04c_test_improvement_cycles.md
.lad/copilot_prompts/: 04_implement_next_task.md  04_test_quality_systematic.md  04a_test_execution_infrastructure.md  04c_test_improvement_cycles.md
.lad/documentation_standards/: MKDOCS_MATERIAL_FORMATTING_GUIDE.md
demo/: README.md  TELEMETRY_COMPARISON_SUMMARY.md  VISUAL_GUIDE.md  example_output_info.json  example_output_stdout  example_output_usage.json  resource_consumer.py  resource_consumer_config.json  run_telemetry_comparison.sh  telemetry_comparison_kedro.md
docs/: resource-statistics.md
docs/design/: multiple-samplers.md
profilers/: pydra.py  smon.py
sandbox/: consume_mem.py  duct_time  profile.sh
scripts/: gen_sampler_matrix.py  regen_matrix.sh
src/: duct.py  profilers.py
src/con_duct/: __init__.py  __main__.py  _constants.py  _duct_main.py  _formatter.py  _models.py  _output.py  _sampling.py  _signals.py  _tracker.py  _utils.py  ansi_colors.py  cli.py  duct_main.py  filesize.py  json_utils.py  ls.py  plot.py  pprint_json.py  suite.py  utils.py
src/con_duct/suite/: ls.py  main.py  plot.py  pprint_json.py
src/duct/: __main__.py
test/: cat_to_err.py  conftest.py  sampler_matrix.csv  sampler_matrix_cgroup-ps-hybrid.csv  sampler_matrix_ps.csv  test_aggregation.py  test_arg_parsing.py  test_cli.py  test_config.py  test_e2e.py  test_env_files.py  test_execution.py  test_formatter.py  test_helpers.py  test_instruments.py  test_json_utils.py  test_log_paths.py  test_ls.py  test_plot.py  test_plot_humanization.py  test_pprint.py  test_prepare_outputs.py  test_report.py  test_schema.py  test_suite.py  test_tailpipe.py  test_utils.py  test_validation.py  test_windows.py  utils.py
test/data/: abandoning_parent.sh  cat_to_err.py  memory_children.py  signal_ignorer.py  spawn_children.sh  test_script.py
test/data/mriqc-example/: info.json  usage.jsonl
test/data/schema_test/: info_schema.txt
test/data/workloads/: README.md  alloc_memory.py  ephemeral_cpu.py  spikey_cpu.py  steady_cpu.py
test/duct_main/: test_aggregation.py  test_duct_utils.py  test_e2e.py  test_execution.py  test_gpu.py  test_log_paths.py  test_prepare_outputs.py  test_report.py  test_resource_validation.py  test_sampler_matrix.py  test_sampling.py  test_tailpipe.py
test/e2e/: test_tailpipe.py  test_tee_stream.py
test/fixtures/: test-config.yaml
tmp-logs/: 399-info.json  399-usage.json  fmriprep_sub-CC0007_usage.jsonl
