[metadata]
name = con-duct
version = attr:con_duct.__main__.__version__
description =  Runs a not-so-simple command and collects resource usage metrics
long_description = file:README.md
long_description_content_type = text/markdown
author = Austin Macdonald
author_email = austin@dartmouth.edu
license = MIT
license_files = LICENSE
url = https://github.com/con/duct/

keywords =
    command-line
    cpu
    memory
    metrics
    output-capture
    provenance
    time
    usage

classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
    Operating System :: Unix
    Operating System :: MacOS

project_urls =
    Source Code = https://github.com/con/duct/
    Bug Tracker = https://github.com/con/duct/issues

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.10

[options.packages.find]
where = src

[options.extras_require]
all =
    matplotlib>=3.5  # first supported version for Python 3.10
    PyYAML>=6.0  # first version with Python 3.10 wheels
    pyout>=0.8  # 0.7 has jsonschema incompatibility
    # Pin rpds-py to support PyPy 3.10 - https://github.com/con/duct/issues/330
    rpds-py<0.28.0; implementation_name == "pypy"
    python-dotenv>=0.19  # first version with Python 3.10 support


[options.entry_points]
console_scripts =
    duct = con_duct.cli:duct_entrypoint
    con-duct = con_duct.cli:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
