
[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.10

[options.packages.find]
where = src

[options.extras_require]
all =
    matplotlib>=3.5  # first supported version for Python 3.10
    PyYAML>=6.0  # first version with Python 3.10 wheels
    pyout>=0.8  # 0.7 has jsonschema incompatibility
    # Pin rpds-py to support PyPy 3.10 - https://github.com/con/duct/issues/330
    rpds-py<0.28.0; implementation_name == "pypy"
    python-dotenv>=0.19  # first version with Python 3.10 support


[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
